# psycopg2_mq

./: .coveragerc  CHANGES.rst  MANIFEST.in  README.rst  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: ci-tests.yml
examples/: README.rst  call.py  deadlock.py  setup.py  source.py  worker.py
src/psycopg2_mq/: __init__.py  model.py  source.py  trigger.py  util.py  worker.py
tests/: conftest.py  test_integration.py  test_it.py  test_source.py  test_util.py
