[metadata]
name = psycopg2_mq
version = 0.12.2
author = Michael Merickel
author_email = oss@m.merickel.org
description = A message queue written around PostgreSQL.
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
license_files = LICENSE.txt
keywords =
    psycopg2
    postgres
    postgresql
    message queue
    background jobs
url = https://github.com/mmerickel/psycopg2_mq
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython

[options]
package_dir =
     = src
packages = find:
zip_safe = False
install_requires =
    python-dateutil
    SQLAlchemy >=1.4
    transaction
    zope.sqlalchemy
include_package_data = True
python_requires = >=3.9

[options.packages.find]
where = src

[options.extras_require]
testing =
    psycopg[binary]
    psycopg2-binary
    pytest
    pytest-cov
    pytest-env
    pytest-postgresql
